Fix adventure to bedrock bridge